...
        
        let myTableView = UITableView()
        myTableView.backgroundColor = .systemBackground
        return myTableView
    }()
    
    let pickerView: UIPickerView = {
        
        let pickerView = UIPickerView()
        pickerView.accessibilityIdentifier = "pickerView"
        return pickerView
    }()
    
...
            navigationBar.heightAnchor.constraint(equalToConstant:50)
        ])
        
        let leftProfileBarButtonItem = UIBarButtonItem(image: UIImage(systemName: "person.circle.fill"), style: .done, target: self, action: #selector(didTappedProfileBarButtonItem))
        
        let buildingSelectionRightBarButtonItem = UIBarButtonItem(image: UIImage(systemName: "line.3.horizontal.decrease.circle"), style: .done, target: self, action: #selector(didTappedBuildingSelectionBarButtonItem))
        buildingSelectionRightBarButtonItem.accessibilityIdentifier = "filterIcon"
        
        let signOutRightBarButtonItem = UIBarButtonItem(image: UIImage(systemName: "power"), style: .done, target: self, action: #selector(didTappedSignOutBarButtonItem))
        signOutRightBarButtonItem.tintColor = .red
        
        let label = UILabel()
        label.text = "Home"
        label.font = UIFont.boldSystemFont(ofSize: 28)
        let mylabel = UIBarButtonItem(customView: label)

        let navigationItem = UINavigationItem()
        navigationItem.leftBarButtonItems = [leftProfileBarButtonItem,mylabel]
        navigationItem.rightBarButtonItems = [signOutRightBarButtonItem,buildingSelectionRightBarButtonItem]
...
            tableView.bottomAnchor.constraint(equalTo: view.safeAreaLayoutGuide.bottomAnchor,constant: -30)
        ])
        
        tableView.register(SPTableViewCell.nib(), forCellReuseIdentifier: SPTableViewCell.identifier)
        tableView.delegate = self
        tableView.dataSource = self
        tableView.accessibilityIdentifier = "BuildingsTableView"
    }
    
    // MARK: Function to reload the tableview amd update the buildingtitlelabel text
    func selectOption(option: String){
        
        buildingTitleLabel.text = option
...
        tableView.reloadData()
    }
    
    // MARK: Function to show the dropdown box when tap the filter button
    func showDropDownBox(){
               
        let alertController = UIAlertController(title: "Select a building", message: nil, preferredStyle: .alert)
        alertController.view.addSubview(pickerView)

        pickerView.translatesAutoresizingMaskIntoConstraints = false
        
        NSLayoutConstraint.activate([
            
...
        
        if selectedIndex > 0 {
           
            pickerView.selectRow(selectedIndex, inComponent: 0, animated: true)
        }
        
        let selectAction = UIAlertAction(title: "Select", style: .default){ (action) in
            
            let selectedIndex = self.pickerView.selectedRow(inComponent: 0)
            self.selectedIndex = selectedIndex
            self.selectOption(option: self.presenter?.getTheBuildingTextBasedOnOption(selectedIndex: selectedIndex) ?? "")
            
        }
...
            cell.floorNumber = indexPath.section
            cell.layer.cornerRadius = 20.0
            cell.delegate = self
            cell.rooms = presenter?.getTheNumberOfRooms(selectedIndex: selectedIndex, index: indexPath.row) ?? []
            cell.cellIndexPath = indexPath
            cell.configureCell()
            cell.accessibilityIdentifier = "MyTableViewCell"
            return cell
        }
        
        return UITableViewCell()
    }
    
...
