...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RoomBookingPageViewController" customModule="RoomBookingApp" customModuleProvider="target">
            <connections>
                <outlet property="buildingField" destination="X4V-ae-hwT" id="jOs-5h-4E5"/>
                <outlet property="dateField" destination="B0x-wa-1lZ" id="EMB-4J-3RL"/>
                <outlet property="endTimeField" destination="xsq-lP-Buc" id="u9u-Ie-5pr"/>
                <outlet property="floorField" destination="CL4-zB-5Tu" id="sUg-zK-kwU"/>
                <outlet property="organizerNameField" destination="hvf-fz-PxO" id="KEY-lv-Jb7"/>
                <outlet property="roomField" destination="vgT-4e-CZf" id="YLF-N6-djp"/>
                <outlet property="startTimeField" destination="gOx-aK-lSY" id="Ak3-D8-ZDp"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a meeting room" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRX-Pr-9ho">
                    <rect key="frame" x="40" y="79" width="313" height="99"/>
                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="srT-gZ-ODJ">
...
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X4V-ae-hwT">
                            <rect key="frame" x="156.66666666666663" y="8" width="156.33333333333337" height="34"/>
                            <accessibility key="accessibilityConfiguration" identifier="BuildingSelectionField"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits"/>
                        </textField>
                    </subviews>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="hqO-Ux-h2F"/>
...
                </stackView>
                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="VCK-sR-EcM">
                    <rect key="frame" x="40" y="738" width="313" height="50"/>
                    <subviews>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AAj-UH-aoU">
                            <rect key="frame" x="0.0" y="8" width="76.666666666666671" height="34.333333333333336"/>
                            <accessibility key="accessibilityConfiguration" identifier="CancelButton"/>
                            <state key="normal" title="Button"/>
                            <buttonConfiguration key="configuration" style="filled" title="Cancel"/>
                            <connections>
                                <action selector="didTappedCancelButton:" destination="-1" eventType="touchUpInside" id="qTp-lx-xBf"/>
                            </connections>
                        </button>
...
