...
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xwr-og-iD5">
                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XQY-D0-fkl">
                                        <rect key="frame" x="0.0" y="0.0" width="393" height="747"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome Back" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wxq-js-LYA">
                                                <rect key="frame" x="30" y="60" width="333" height="40"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="Mv1-3t-NFt"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username or Email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sL9-2q-UCT">
                                                <rect key="frame" x="30" y="220" width="333" height="40"/>
                                                <color key="backgroundColor" systemColor="systemGray4Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="userNameField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="PP4-S9-FHg"/>
                                                </constraints>
                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" smartDashesType="yes" smartInsertDeleteType="yes" smartQuotesType="yes" textContentType="email"/>
...
                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7BR-Cl-MA4">
                                                <rect key="frame" x="30" y="380" width="333" height="40"/>
                                                <color key="backgroundColor" systemColor="systemGray4Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="passWordField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="HIf-Jc-AOQ"/>
                                                </constraints>
                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="yes" spellCheckingType="no" keyboardType="alphabet" secureTextEntry="YES" smartDashesType="yes" smartInsertDeleteType="yes" smartQuotesType="yes" textContentType="password"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FUK-hs-RrF">
                                                <rect key="frame" x="30" y="480" width="333" height="40"/>
                                                <accessibility key="accessibilityConfiguration" identifier="signInButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="aBp-Vj-rKK"/>
                                                </constraints>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="filled" title="Sign In">
                                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="18"/>
...
